## Kakao OAuth2 로그인 구현
### Description
- Kakao OAuth2 로그인 구현을 위해 CustomOAuth2UserDetailsService 로직 추가
- Refactoring 예정

--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -8,5 +8,6 @@
 <h1>로그인 페이지</h1>
 <hr/>
 <a href="/oauth2/authorization/naver">네이버 로그인</a> <!-- 고정 주소 -->
+<a href="/oauth2/authorization/kakao">카카오 로그인</a> <!-- 고정 주소 -->
 </body>
 </html>
